<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_module">
        <rikka.material.preference.MaterialSwitchPreference
            android:key="detailLog"
            android:title="@string/settings_detail_log" />
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="512"
            android:entries="@array/max_log_size_entries"
            android:entryValues="@array/max_log_size_values"
            android:key="maxLogSize"
            android:title="@string/settings_max_log_size" />
        <rikka.material.preference.MaterialSwitchPreference
            android:key="hideIcon"
            android:summary="@string/settings_hide_icon_summary"
            android:title="@string/settings_hide_icon" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_update">
        <rikka.material.preference.MaterialSwitchPreference
            android:disableDependentsState="true"
            android:key="disableUpdate"
            android:title="@string/settings_disable_update" />
        <rikka.material.preference.MaterialSwitchPreference
            android:dependency="disableUpdate"
            android:key="receiveBetaUpdate"
            android:summary="@string/settings_receive_beta_update_summary"
            android:title="@string/settings_receive_beta_update" />
    </PreferenceCategory>
</PreferenceScreen>
