<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_module">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="HookSelf"
            android:summary="@string/settings_hook_self_summary"
            android:title="@string/settings_hook_self" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="DetailLog"
            android:title="@string/settings_detail_log" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="HideIcon"
            android:summary="@string/settings_hide_icon_summary"
            android:title="@string/settings_hide_icon" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_service">
        <ListPreference
            android:defaultValue="System Hook"
            android:enabled="false"
            android:entries="@array/hook_mode"
            android:entryValues="@array/hook_mode"
            android:icon="@drawable/ic_hook_mode"
            android:key="HookMode"
            android:title="@string/settings_hook_mode" />
        <Preference
            android:key="StopSystemService"
            android:summary="@string/settings_stop_system_service_summary"
            android:title="@string/settings_stop_system_service" />
    </PreferenceCategory>
</PreferenceScreen>