<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        style="@style/Default"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            style="@style/Default"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/usage_hint_icon"
                style="@style/DefaultImage"
                android:src="@drawable/ic_info" />

            <TextView
                style="@style/DefaultText"
                android:paddingVertical="12dp"
                android:paddingEnd="10dp"
                android:text="@string/template_usage_hint" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.tsng.hidemyapplist.app.ui.views.OptionView
        android:id="@+id/create_blacklist"
        style="@style/Default"
        app:optionDrawable="@drawable/ic_add"
        app:optionText="@string/template_new_blacklist" />

    <com.tsng.hidemyapplist.app.ui.views.OptionView
        android:id="@+id/create_whitelist"
        style="@style/Default"
        app:optionDrawable="@drawable/ic_add"
        app:optionText="@string/template_new_whitelist" />

    <include layout="@layout/line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/template_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>